# surrealdb-test

./: .gitignore  .surrealdb  Cargo.toml  Database-ERDiagram.md  Database-ERDiagram.puml  database.puml
docs/: Database-ERDiagram.puml
migrations/: 20230429105833_cache_avatar.sql  20230429105840_cache_world.sql  20230429105852_configs.sql  20230429105924_gamelog_event.sql  20230429105935_gamelog_portal_spawn.sql  20230429105944_gamelog_video_play.sql  20230429105949_memos.sql  20230429110204_sqlite_master.sql
migrations/definitions/: _initial.json
migrations/user_specific/: 20230429110010_avatar_history.sql  20230429110038_feed_online_offline.sql  20230429110049_feed_status.sql
schemas/: friend_log_current.surql  gamelog_join_leave.surql  gamelog_locations.surql  script_migration.surql
scripts/: start-server.ps1
sql_schema/: 20230429103651_gamelog_location.sql  20230429105916_favorite_world.sql  20230429105929_gamelog_join_leave.sql
sql_schema/user_specific/: 20230429110018_feed_avatar.sql  20230429110021_feed_bio.sql  20230429110024_feed_gps.sql  20230429110057_friend_log_current.sql  20230429110101_friend_log_history.sql  20230429110107_moderation.sql  20230429110111_notifications.sql
src/: lib.rs  main.rs  settings.toml
src/models/: app_config.rs  connection.rs  database.rs  gamelog_join_leave.rs  gamelog_location.rs  usr_friend_log_current.rs
src/rows/: gamelog_join_leave.rs  gamelog_location.rs  sqlite_master.rs  usr_friend_log_current.rs
src/zaphkiel/: join_leave_event.rs  macros.rs  trust_level.rs  world_instance.rs  world_regions.rs
