[package]
name = "surrealdb-test"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
itertools = "0.10.5"
surrealdb = "1.0.0-beta.9"
surrealdb-migrations = "0.9.5"
config = "0.13.3"
directories = "5.0.1"
